--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css" </head>
-
+    <link rel="stylesheet" href="style.css"
+</head>
 <body>
     <nav class="top">
-        <h2 id="logo">.fiftytwo</h2></b>
+        <div id="logo_container">
+        .fiftytwo</b>
+        </div>
+        <div id="git_logo">
+            <i class="fa-brands fa-github"></i>
+        </div>
         <div class="menu">
             <i class="fa-solid fa-bars"></i>
         </div>
@@ -38,5 +43,4 @@
         </div>
     </footer>
 </body>
-
 </html>
