bottom block upload

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="main_text_body">
                 <h3>
-                    I am GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
+                    It's madafakin GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
                     Nothing else!!
                 </h3>
             </div>
@@ -52,6 +52,55 @@
           <div class="img_container"></div>    
         </div>
       </div>
+    </div>
+    <div class="bottom_block">
+        <div class="box">
+            <div id="box_content">
+                <div class="box_content_heading">
+                    Heading
+                </div>
+                <div class="box_content_body">
+                    body
+                </div>
+            </div>
+        </div>
+        <div class="box">
+            <div id="box_content">
+                <div class="box_content_heading">
+                    Heading
+                </div>
+                <div class="box_content_body">
+                    body
+                </div>
+            </div>
+        </div> <div class="box">
+            <div id="box_content">
+                <div class="box_content_heading">
+                    Heading
+                </div>
+                <div class="box_content_body">
+                    body
+                </div>
+            </div>
+        </div> <div class="box">
+            <div id="box_content">
+                <div class="box_content_heading">
+                    Heading
+                </div>
+                <div class="box_content_body">
+                    body
+                </div>
+            </div>
+        </div> <div class="box">
+            <div id="box_content">
+                <div class="box_content_heading">
+                    Heading
+                </div>
+                <div class="box_content_body">
+                    body
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
        <div>All copyright
