--- a/index.html
+++ b/index.html
@@ -37,21 +37,25 @@
     </nav>
     <div class="image_maintext">
         <div class="txt_img_container">
-        <div class="main_text">
-            <div class="main_text_heading">
+            <div class="main_text">
+                <div class="main_text_heading">
                 <h1>Hello there!</h1>
-            </div>
+                </div>
             <div class="main_text_body">
                 <h3>
                     It's madafakin GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
                     Nothing else!!
                 </h3>
+                <div class="hire_button">
+                <button id="button_in_blue">Don't hire me (In blue)</button>
+                <button id="button_in_orange">Don't hire me (in orange)</button>
+                </div>
             </div>
         </div>
         <div class="my_image">
           <div class="img_container"></div>    
         </div>
-      </div>
+        </div>
     </div>
     <div class="bottom_block">
         <div class="box">
