--- a/.stversions/index~20240504-222926.html
+++ b/.stversions/index~20240504-222926.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>webMe-GaNesh Khatiwada</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css" </head>
-
+    <link rel="stylesheet" href="style.css"
+</head>
 <body>
     <nav class="top">
         <div id="logo_container">
-            .fiftytwo</b>
+        .fiftytwo</b>
         </div>
         <div id="notch_left">
         </div>
@@ -19,10 +19,10 @@
             <div id="eye">
                 <div id="eye_left">
 
-                </div>
-                <div id="eye_right">
+                 </div>
+                 <div id="eye_right">
 
-                </div>
+                 </div>
             </div>
             <div id="mouth">
 
@@ -39,22 +39,22 @@
         <div class="txt_img_container">
             <div class="main_text">
                 <div class="main_text_heading">
-                    <h1>Hello there!</h1>
+                <h1>Hello there!</h1>
                 </div>
-                <div class="main_text_body">
-                    <h3>
-                        It's madafakin GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
-                        Nothing else!!
-                    </h3>
-                    <div class="hire_button">
-                        <button id="button_in_blue">Don't hire me (In blue)</button>
-                        <button id="button_in_orange">Don't hire me (in orange)</button>
-                    </div>
+            <div class="main_text_body">
+                <h3>
+                    It's madafakin GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
+                    Nothing else!!
+                </h3>
+                <div class="hire_button">
+                <button id="button_in_blue">Don't hire me (In blue)</button>
+                <button id="button_in_orange">Don't hire me (in orange)</button>
                 </div>
             </div>
-            <div class="my_image">
-                <div class="img_container"></div>
-            </div>
+        </div>
+        <div class="my_image">
+          <div class="img_container"></div>    
+        </div>
         </div>
     </div>
     <div class="bottom_block">
@@ -77,8 +77,7 @@
                     body
                 </div>
             </div>
-        </div>
-        <div class="box">
+        </div> <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
                     Heading
@@ -87,8 +86,7 @@
                     body
                 </div>
             </div>
-        </div>
-        <div class="box">
+        </div> <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
                     Heading
@@ -97,8 +95,7 @@
                     body
                 </div>
             </div>
-        </div>
-        <div class="box">
+        </div> <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
                     Heading
@@ -110,9 +107,8 @@
         </div>
     </div>
     <footer>
-        <div>All copyright
+       <div>All copyright
         </div>
     </footer>
 </body>
-
 </html>
