--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="main_text_body">
                     <h3>
-                        It's madafakin GaNesh Khatiwada, 100% human, verified by captcha. :)<br>
+                        It's GaNesh Khatiwada,<br>Captcha verified human (100%)  <span>:)</span><br>
                         Nothing else!!
                     </h3>
                     <div class="hire_button">
@@ -55,6 +55,14 @@
             <div class="my_image">
                 <div class="img_container"></div>
             </div>
+        </div>
+    </div>
+    <div id="projects_text">
+        <div id="text">
+            My Projects
+        </div>
+        <div id="underline">
+
         </div>
     </div>
     <div class="bottom_block">
