--- a/index.html
+++ b/index.html
@@ -69,50 +69,50 @@
         <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
-                    Heading
+                    Project1
                 </div>
                 <div class="box_content_body">
-                    body
+                    Details...
                 </div>
             </div>
         </div>
         <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
-                    Heading
+                    Project2
                 </div>
                 <div class="box_content_body">
-                    body
+                    Details...
                 </div>
             </div>
         </div>
         <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
-                    Heading
+                    Project3
                 </div>
                 <div class="box_content_body">
-                    body
+                    Details...
                 </div>
             </div>
         </div>
         <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
-                    Heading
+                    Project4
                 </div>
                 <div class="box_content_body">
-                    body
+                    Details...
                 </div>
             </div>
         </div>
         <div class="box">
             <div id="box_content">
                 <div class="box_content_heading">
-                    Heading
+                    Project5
                 </div>
                 <div class="box_content_body">
-                    body
+                    Details...
                 </div>
             </div>
         </div>
