major bottom changes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="main_text_body">
                     <h3>
-                        It's GaNesh Khatiwada,<br>Captcha verified human (100%)  <span>:)</span><br>
+                        It's GaNesh Khatiwada,<br>Captcha verified human (100%) <span>:)</span><br>
                         Nothing else!!
                     </h3>
                     <div class="hire_button">
@@ -57,62 +57,145 @@
             </div>
         </div>
     </div>
-    <div id="projects_text">
-        <div id="text">
-            My Projects
-        </div>
-        <div id="underline">
+    <div class="bottom_block">
+        <div class="box_block">
+            <!-- <div id="title_underline"> -->
+            <p id="block_title">Projects</p>
+            <!-- <div class="underline"></div> -->
+            <!-- </div> -->
+            <div class="project_boxrow1">
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project1
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project2
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project3
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+            </div>
+            <div class="project_boxrow1">
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project1
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project2
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project3
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+            </div>
+            <div class="project_boxrow1">
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project1
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project2
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Project3
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
+                </div>
+            </div>
+
 
         </div>
-    </div>
-    <div class="bottom_block">
-        <div class="box">
-            <div id="box_content">
-                <div class="box_content_heading">
-                    Project1
+        <div class="box_block">
+            <p id="block_title">Contact me</p>
+            <div class="underline"></div>
+            <div class="project_boxrow1">
+                <div class="project_box">
+                    <div id="project_box_icon">
+                        <div id="icon"><i class="fa-brands fa-facebook"></i></div>
+                    </div>
                 </div>
-                <div class="box_content_body">
-                    Details...
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        <div id="project_box_icon">
+                            <div id="icon"><i class="fa-brands fa-github"></i></div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="box">
-            <div id="box_content">
-                <div class="box_content_heading">
-                    Project2
-                </div>
-                <div class="box_content_body">
-                    Details...
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div id="box_content">
-                <div class="box_content_heading">
-                    Project3
-                </div>
-                <div class="box_content_body">
-                    Details...
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        <div id="project_box_icon">
+                            <div id="icon"><i class="fa-solid fa-envelope"></i></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="box">
-            <div id="box_content">
-                <div class="box_content_heading">
-                    Project4
+        <div class="box_block">
+            <p id="block_title">Blogs</p>
+            <div class="underline"></div>
+            <div class="project_boxrow1">
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Blog1
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
                 </div>
-                <div class="box_content_body">
-                    Details...
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Blog2
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="box">
-            <div id="box_content">
-                <div class="box_content_heading">
-                    Project5
-                </div>
-                <div class="box_content_body">
-                    Details...
+                <div class="project_box">
+                    <div id="project_box_heading">
+                        Blog3
+                    </div>
+                    <div id="project_box_body">
+                        Details...
+                    </div>
                 </div>
             </div>
         </div>
